Adjust screen size breakpoints, change fonts to improve readability and look of website, fix issue with top alignment of first two sections on tablet and desktop screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* link to import Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Castoro&family=Work+Sans&display=swap');
 
 * {
     border: none;
@@ -9,8 +9,8 @@
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 400;
     color: black;
     letter-spacing: .3px;
 }
@@ -18,7 +18,7 @@ body {
 /* headings */
 
 h1, h2 {
-    font-family: 'Libre Baskerville', serif;
+    font-family: 'Castoro', serif;
 }
 
 /* header styling */
@@ -103,11 +103,10 @@ th, td {
     padding: 5px 0;
 }
 
-
 /* image styling */
 
 .image-box {
-    padding: 15px;
+    padding: 25px 15px 15px;
     float: right;
     width: 35%;
     display: inline;
@@ -117,7 +116,7 @@ th, td {
 }
 
 #gallery-image-box {
-    padding: 15px;
+    padding: 25px 15px 15px;
     float: right;
     width: 35%;
     display: inline;
@@ -244,7 +243,7 @@ button {
 
 /* small to medium screen sizes up to 800 pixels */
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 750px) {
     #penguin-facts, #penguin-size, #penguin-science, #fun-facts, #more-info {
         width: 90%;
         margin-right: 1%;
